--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,6 @@
 {
     "recommendations": [
         "Gruntfuggly.auto-snippet",
-        "hexnaught.vscode-bitburner-connector"
+        "bitburner.bitburner-vscode-integration"
     ]
 }
