--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "npx tsc",
         "dev": "npx tsc -w",
-        "update": "curl -sL https://raw.githubusercontent.com/danielyxie/bitburner/dev/src/ScriptEditor/NetscriptDefinitions.d.ts -O NetscriptDefinitions.d.ts"
+        "update": "curl -sL https://raw.githubusercontent.com/danielyxie/bitburner/dev/src/ScriptEditor/NetscriptDefinitions.d.ts -o NetscriptDefinitions.d.ts"
     },
     "repository": {
         "type": "git",
